[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/TransicionEdificios.gd" type="Script" id=1]
[ext_resource path="res://sprites/ciudad/Ed6_Dentromapa NUEVO DIA.png" type="Texture" id=2]
[ext_resource path="res://sprites/ciudad/Ed6_Dentromapa NUEVO NOCHE1.png" type="Texture" id=3]
[ext_resource path="res://sprites/ciudad/Ed6_Dentromapa NUEVO NOCHE2.png" type="Texture" id=4]
[ext_resource path="res://sprites/ciudad/NEON.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0

[node name="EdificioAntonio" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="." index="0"]

position = Vector2( 950, 500 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Visibility" ]

[node name="Sprite2" type="Sprite" parent="." index="1"]

material = SubResource( 1 )
position = Vector2( 950, 500 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Material" ]

[node name="Sprite3" type="Sprite" parent="." index="2"]

position = Vector2( 950, 500 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Iluminacion" type="Light2D" parent="." index="3"]

position = Vector2( 719.641, 630.806 )
rotation = 1.55669
scale = Vector2( 0.111866, 0.151685 )
enabled = true
editor_only = false
texture = ExtResource( 5 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Material", "Z Index" ]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


